Author Bug on Mobile
Fixing the author spacing bug on mobile.

--- a/wp-content/themes/levels-wp-1-child/style.css
+++ b/wp-content/themes/levels-wp-1-child/style.css
@@ -103,3 +103,7 @@
   font-weight: 600;
   margin: 0 0 14px 0;
 }
+
+.author_container {
+  padding: 2em 4em !important;
+}
